# Data-1204_Assignment-4

./: .env  .gitignore  README.md  analysis_preview.md  assignment4_analysis_plan.md  assignment4_reflection.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/bronze/holidays/: us_holidays_2026-04-04T20-47-52.json  us_holidays_2026-04-04T22-00-57.json
data/bronze/open_meteo/: weather_2026-03-26T11-47-52.json  weather_2026-03-26T13-33-48.json
data/gold/: nasa_weather_gold.csv
data/silver/holidays/: daily_holidays.csv
data/silver/nasa_eonet/: daily_events.csv
data/silver/open_meteo/: daily_weather.csv
ingest/: holiday_ingest.py  nasa_eonet_ingest.py  open_meteo_ingest.py
notebooks/: holidays.ipynb  nasa_eonet.ipynb  open_meteo.ipynb
notebooks/data/bronze/open_meteo/: weather_2026-03-27T20-37-17.json
transform/: gold_nasa_weather.py  holiday_transform.py  nasa_eonet_transform.py  open_meteo_transform.py
