[project]
name = "data-1204-assignment-4"
version = "0.1.0"
description = "Assignment 4 Bronze to Silver to Gold pipeline for NASA events, weather, and holiday analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.55.0",
]
